# cpp_grad_training

./: README.md
lambda_functions/: CMakeLists.txt  Exercises.txt  filter.hpp  main.cpp
templates/: CMakeLists.txt  Exercises.txt  basket_1.hpp  basket_2.hpp  basket_3.hpp  basket_4.hpp  main.cpp  products.hpp  sellers.hpp
templates_simple/: CMakeLists.txt  main.cpp
visitor/: CMakeLists.txt  hierarchy.cpp  hierarchy.hpp  main.cpp  sound_visitor.cpp  sound_visitor.hpp  visitor.hpp
